02 fundamentals homework done

--- a/02-HTML-Fundamentals/index.html
+++ b/02-HTML-Fundamentals/index.html
@@ -22,13 +22,18 @@
       <header>
         <h2>The Basic Language of the Web: HTML</h2>
         <img
-          src="./laura-jones.jpg"
+          src="./img/laura-jones.jpg"
           alt="laura jones image"
           height="64%"
           width="64"
         />
         <p>Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027</p>
-        <img src="./post-img.jpg" alt="code image" width="500" height="200" />
+        <img
+          src="./img/post-img.jpg"
+          alt="code image"
+          width="500"
+          height="200"
+        />
       </header>
 
       <p>
@@ -83,7 +88,28 @@
       </ul>
       <p>Hopefully you learned something new here. See you next time!</p>
     </article>
-
+    <aside>
+      <ul>
+        <li>
+          <img src="./img/related-1.jpg" alt="blank" width="70px" /><a href="#"
+            >Some link</a
+          >
+          <p>By Someone</p>
+        </li>
+        <li>
+          <img src="./img/related-2.jpg" alt="blank" width="70px" /><a href="#"
+            >Some link</a
+          >
+          <p>By Someone</p>
+        </li>
+        <li>
+          <img src="./img/related-3.jpg" alt="blank" width="70px" /><a href="#"
+            >Some link</a
+          >
+          <p>By Someone</p>
+        </li>
+      </ul>
+    </aside>
     <footer>Copyright &copy; 2021 by Michał Maciorowski</footer>
   </body>
 </html>
