--- a/04-CSS-Layouts/index.html
+++ b/04-CSS-Layouts/index.html
@@ -17,8 +17,8 @@
     <h6>The Basic Language of the Web: HTML</h6>
     -->
 
-    <div class="container">
-      <header class="main-header">
+    <div class="container clearfix">
+      <header class="main-header clearfix">
         <h1>📘 The Code Magazine</h1>
 
         <nav>
@@ -28,6 +28,8 @@
           <a href="#">Flexbox</a>
           <a href="#">CSS Grid</a>
         </nav>
+
+        <!-- <div class="clear"></div> -->
       </header>
 
       <article>
@@ -39,9 +41,10 @@
             alt="Headshot of Laura Jones"
             height="50"
             width="50"
+            class="author-img"
           />
 
-          <p id="author">
+          <p id="author" class="author">
             Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
           </p>
 
