--- a/06-Components/05-hero-section.html
+++ b/06-Components/05-hero-section.html
@@ -8,7 +8,13 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Hero Section</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Omnifood Hero Section</title>
 
     <style>
       /*
@@ -19,7 +25,7 @@
       10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
       */
 
-      /* 
+      /*
       MAIN COLOR: #087F5B
       GREY: #343a40
       */
@@ -34,13 +40,111 @@
       /* GENERAL STYLES */
       /* ------------------------ */
       body {
-        font-family: "Inter", sans-serif;
-        color: #343a40;
+        font-family: "Rubik", sans-serif;
+        color: #444;
         line-height: 1;
+      }
+      .containter {
+        width: 1200px;
+        margin: 0 auto;
+      }
+      header {
+        /* background-color: orangered; */
+        height: 100vh;
+        position: relative;
+
+        background-image: linear-gradient(
+            rgba(34, 34, 34, 0.6),
+            rgba(34, 34, 34, 0.6)
+          ),
+          url(hero.jpg);
+        background-size: cover;
+
+        color: white;
+      }
+      nav {
+        font-size: 20px;
+        font-weight: 700;
+        display: flex;
+        justify-content: space-between;
+        padding-top: 32px;
+        /* background-image: linear-gradient(to right, red, blue); */
+      }
+      .header-container {
+        position: absolute;
+        width: 1200px;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        /* text-align: center; */
+      }
+      .header-container-inner {
+        width: 50%;
+      }
+      h1 {
+        font-size: 52px;
+        margin-bottom: 32px;
+        line-height: 1.05;
+      }
+      p {
+        font-size: 20px;
+        line-height: 1.6;
+        margin-bottom: 48px;
+      }
+
+      .btn:link,
+      .btn:visited {
+        font-size: 20px;
+        font-weight: 600;
+        background-color: #e67e22;
+        color: white;
+        text-decoration: none;
+        display: inline-block;
+        padding: 16px 32px;
+        border-radius: 9px;
+      }
+
+      h2 {
+        font-size: 44px;
+        margin-bottom: 48px;
+      }
+      section {
+        padding: 96px 0;
       }
     </style>
   </head>
   <body>
-    <div class=""></div>
+    <header>
+      <nav class="containter">
+        <div>LOGO</div>
+        <div>NAVIGATION</div>
+      </nav>
+
+      <div class="header-container">
+        <div class="header-container-inner">
+          <h1>A healty meal delivered to your door, every single day</h1>
+          <p>
+            The smart 365-days-per-year food subscription that will make you eat
+            healty algain. Tailored to your personal tastes and nutritional
+            needs
+          </p>
+          <a href="#" class="btn">Start eating well</a>
+        </div>
+      </div>
+    </header>
+    <section>
+      <div class="containter">
+        <h2>Some random heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur,
+          autem hic fugit harum facilis minus explicabo eius vitae architecto
+          corporis ad nihil reprehenderit provident excepturi nam itaque totam,
+          voluptas eaque. Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Rerum commodi modi, similique quidem aliquam atque error ipsam,
+          doloremque illum eveniet totam itaque! Et explicabo quibusdam quasi
+          incidunt vel, quo distinctio.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
